release-notes/26.5.2/release-notes.md
## 简体中文

感谢你使用 Pastel！

我们很高兴带来 Pastel 26.5.2。

此次更新内容为：

1. 支持下载 App 时选择“不再更新”。选择后，此 App 将不能再通过 App Store 更新。
2. “下载”板块支持显示版本 ID、是否为可检索更新版本，并优化了部分显示效果。
3. 修复了一些已知问题。

如果在使用 Pastel 时遇到任何问题，请在 GitHub 提交 Issue。

## 繁體中文

感謝你使用 Pastel！

我們很高興帶來 Pastel 26.5.2。

此次更新內容為：

1. 支援下載 App 時選擇「不再更新」。選擇後，此 App 將不能再透過 App Store 更新。
2. 「下載」板塊支援顯示版本 ID、是否為可檢索更新版本，並最佳化了部分顯示效果。
3. 修復了一些已知問題。

如果在使用 Pastel 時遇到任何問題，請在 GitHub 提交 Issue。

## English

Thank you for using Pastel!

We are happy to bring you Pastel 26.5.2.

What's new:

1. Added an option to download an app with “No Longer Update”. When enabled, the app can no longer be updated through the App Store.
2. The Downloads section now shows the version ID and whether the downloaded app can still be found for updates, with improved visual details.
3. Fixed several known issues.

If you run into any problems while using Pastel, please submit an Issue on GitHub.

## 日本語

Pastel をご利用いただきありがとうございます！

Pastel 26.5.2 をお届けします。

今回の更新内容：

1. App のダウンロード時に「アップデートしない」を選択できるようになりました。有効にすると、その App は App Store から更新できなくなります。
2. 「ダウンロード」セクションでバージョン ID と、更新として検索可能なバージョンかどうかを表示できるようになり、一部の表示を改善しました。
3. いくつかの既知の問題を修正しました。

Pastel の使用中に問題が発生した場合は、GitHub で Issue を作成してください。

## 한국어

Pastel을 사용해 주셔서 감사합니다!

Pastel 26.5.2를 제공합니다.

이번 업데이트 내용:

1. 앱 다운로드 시 “더 이상 업데이트 안 함” 옵션을 선택할 수 있습니다. 이 옵션을 선택하면 해당 앱은 App Store를 통해 더 이상 업데이트할 수 없습니다.
2. “다운로드” 섹션에서 버전 ID와 업데이트 검색 가능 여부를 표시하도록 지원하고 일부 표시 효과를 개선했습니다.
3. 알려진 문제를 일부 수정했습니다.

Pastel 사용 중 문제가 있으면 GitHub에 Issue를 제출해 주세요.

## ภาษาไทย

ขอบคุณที่ใช้ Pastel!

เรายินดีที่ได้นำ Pastel 26.5.2 มาให้ใช้งาน

สิ่งที่อัปเดตในเวอร์ชันนี้:

1. เพิ่มตัวเลือก “ไม่อัปเดตอีก” เมื่อดาวน์โหลดแอป หากเลือกตัวเลือกนี้ แอปนั้นจะไม่สามารถอัปเดตผ่าน App Store ได้อีก
2. ส่วน “ดาวน์โหลด” รองรับการแสดง Version ID และสถานะว่าเป็นเวอร์ชันที่ค้นหาเพื่อตรวจอัปเดตได้หรือไม่ พร้อมปรับปรุงการแสดงผลบางส่วน
3. แก้ไขปัญหาที่ทราบบางรายการ

หากพบปัญหาระหว่างใช้งาน Pastel โปรดส่ง Issue บน GitHub
